--- a/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
@@ -13,24 +13,24 @@
             <div class="card-body">
             <div class="form-group row">
               <div class="col-md-6">
-                <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Enter  StudentName" required>
+                <input type="text" class="form-control" id="fname" [(ngModel)]="fname" name="fname" placeholder="Enter  Studen firsttName" required>
                
               </div>
 
               <div class="col-md-6">
-                <input type="text" class="form-control" id="fname" [(ngModel)]="fname" name="fname" placeholder="Enter Student FatherName" required>
+                <input type="text" class="form-control" id="lname" [(ngModel)]="lname" name="lname" placeholder="Enter Student lastName" required>
                
               </div>
 
             </div>
             <div class="form-group row">
               <div class="col-md-6">
-                <input type="text"  class="form-control" id="enrollment" [(ngModel)]="enrollment" name="enrollment" placeholder="Enter Enrollment Number" required>
+                <input type="text"  class="form-control" id="enrollment" [(ngModel)]="enrollment" name="enrollment" placeholder="Enter enrollment number" required>
                 
               </div>
 
               <div class="col-md-6">
-                <input type="text"  class="form-control"  id="expiry" [(ngModel)]="expiry" name="expiry" placeholder="Enter expiry date of id card" required>
+                <input type="text"  class="form-control"  id="nationalidentitynumber" [(ngModel)]="nationalidentitynumber" name="nationalidentitynumber" placeholder="Enter national identity number" required>
                 
               </div>
 
@@ -71,7 +71,7 @@
 
                 <div class="col-md-6">
 
-                  <input type="text"  class="form-control" id="studentresidentialaddress" [(ngModel)]="studentresidentialaddress" name="studentresidentialaddress" placeholder="Enter Student residential address" required>
+                  <input type="text"  class="form-control" id="cgpa" [(ngModel)]="cgpa" name="cgpa" placeholder="Enter cgpa" required>
                   
                 </div>
                 
