--- a/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
@@ -13,26 +13,30 @@
             <div class="card-body">
             <div class="form-group row">
               <div class="col-md-6">
-                <input type="text" class="form-control" id="fname" [(ngModel)]="fname" name="fname" placeholder="Enter  Studen firsttName" required>
+                <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Enter  Student Name" required>
                
               </div>
 
               <div class="col-md-6">
-                <input type="text" class="form-control" id="lname" [(ngModel)]="lname" name="lname" placeholder="Enter Student lastName" required>
+                <input type="text" class="form-control" id="fathername" [(ngModel)]="fathername" name="fathername" placeholder="Enter Student FatherName" required>
                
               </div>
 
             </div>
             <div class="form-group row">
               <div class="col-md-6">
+                <input type="text"  class="form-control"  id="rollnumber" [(ngModel)]="rollnumber" name="rollnumber" placeholder="Enter rollnumber" required>
+                
+              </div>
+
+
+
+              <div class="col-md-6">
                 <input type="text"  class="form-control" id="enrollment" [(ngModel)]="enrollment" name="enrollment" placeholder="Enter enrollment number" required>
                 
               </div>
 
-              <div class="col-md-6">
-                <input type="text"  class="form-control"  id="nationalidentitynumber" [(ngModel)]="nationalidentitynumber" name="nationalidentitynumber" placeholder="Enter national identity number" required>
-                
-              </div>
+              
 
             </div>
 
@@ -44,25 +48,12 @@
                 <input type="text"  class="form-control" id="batch" [(ngModel)]="batch" name="batch" placeholder="Add Batch" required>
                 
               </div>
-
+              
               <div class="col-md-6">
+                <input type="text"  class="form-control" id="cgpa" [(ngModel)]="cgpa" name="cgpa" placeholder="Enter cgpa" required>
                 
-                <mat-form-field >
-
-                  <mat-select id="department" [(ngModel)]="department" name="department" placeholder = "Department Name" required  >
-
-                  
-
-                    <mat-option *ngFor="let dp of depart" [value]="dp.value"  >
-                      {{ dp.viewValue }}
-                    </mat-option>
-
-                    
-                  </mat-select>
-
- 
-                </mat-form-field>
-                </div>
+              </div>
+              
 
 
                 </div>
@@ -71,7 +62,7 @@
 
                 <div class="col-md-6">
 
-                  <input type="text"  class="form-control" id="cgpa" [(ngModel)]="cgpa" name="cgpa" placeholder="Enter cgpa" required>
+                  <input type="text"  class="form-control" id="dateofgraduation" [(ngModel)]="dateofgraduation" name="dateofgraduation" placeholder="Enter date of graduation" required>
                   
                 </div>
                 
