Some changes in frontend

--- a/Angular4_CLI_Full_Project/src/app/views/components/enrollment.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/enrollment.component.html
@@ -13,7 +13,7 @@
             <div class="form-group row">
               
               <div class="col-md-9">
-                <input type="text" class="form-control" id="enrollmentid" [(ngModel)]="enrollmentid" name="enrollmentid" placeholder="Enter  enrollmentid" required >
+                <input type="text" class="form-control" id="enrollmentid" [(ngModel)]="enrollmentid" name="enrollmentid" placeholder="Enrollment Number" required >
                
               </div>
             </div>
@@ -42,7 +42,7 @@
 <div class="row">
     <div class="col-md-12">
       
-<label class="col-md-3 col-form-label" >Raw Data Of Block</label>
+<h3 class="col-md-3 col-form-label" >Degree Status</h3>
 <div #dataContainer></div>
 
     </div>
