--- a/Angular4_CLI_Full_Project/src/app/views/components/blockchainsearch.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/blockchainsearch.component.html
@@ -15,7 +15,7 @@
             <div class="form-group row">
               
               <div class="col-md-9">
-                <input type="text" class="form-control" id="blocknumber" [(ngModel)]="blockNumber" name="blockNumber" placeholder="Enter  blocknumber" required  >
+                <input type="text" class="form-control" id="blocknumber" [(ngModel)]="blockNumber" name="blockNumber" placeholder="Block Number" required  >
                
               </div>
             </div>
@@ -44,7 +44,7 @@
     <div class="col-md-3">
       
 
-<strong>Transaction Id</strong>
+<strong>Degree ID</strong>
 
     </div>
     <div class="col-md-9">
@@ -57,7 +57,7 @@
     <div class="col-md-3">
       
 
-<strong>Previous Hash</strong>
+<strong>Previous Block Hash</strong>
 
     </div>
     <div class="col-md-9">
@@ -70,7 +70,7 @@
     <div class="col-md-3">
       
 
-<strong>Endorsement Name</strong>
+<strong>Endorsed by</strong>
 
     </div>
 <div class="col-md-9">
