--- a/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/tables.component.html
@@ -13,26 +13,26 @@
             <div class="card-body">
             <div class="form-group row">
               <div class="col-md-6">
-                <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Enter  Student Name" required>
+                <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Student Name" required>
                
               </div>
 
               <div class="col-md-6">
-                <input type="text" class="form-control" id="fathername" [(ngModel)]="fathername" name="fathername" placeholder="Enter Student FatherName" required>
+                <input type="text" class="form-control" id="fathername" [(ngModel)]="fathername" name="fathername" placeholder="Father Name" required>
                
               </div>
 
             </div>
             <div class="form-group row">
               <div class="col-md-6">
-                <input type="text"  class="form-control"  id="rollnumber" [(ngModel)]="rollnumber" name="rollnumber" placeholder="Enter rollnumber" required>
+                <input type="text"  class="form-control"  id="rollnumber" [(ngModel)]="rollnumber" name="rollnumber" placeholder="Roll Number" required>
                 
               </div>
 
 
 
               <div class="col-md-6">
-                <input type="text"  class="form-control" id="enrollment" [(ngModel)]="enrollment" name="enrollment" placeholder="Enter enrollment number" required>
+                <input type="text"  class="form-control" id="enrollment" [(ngModel)]="enrollment" name="enrollment" placeholder="Enrollment Number" required>
                 
               </div>
 
@@ -45,12 +45,12 @@
              
 
               <div class="col-md-6">
-                <input type="text"  class="form-control" id="batch" [(ngModel)]="batch" name="batch" placeholder="Add Batch" required>
+                <input type="text"  class="form-control" id="batch" [(ngModel)]="batch" name="batch" placeholder="Batch" required>
                 
               </div>
               
               <div class="col-md-6">
-                <input type="text"  class="form-control" id="cgpa" [(ngModel)]="cgpa" name="cgpa" placeholder="Enter cgpa" required>
+                <input type="text"  class="form-control" id="cgpa" [(ngModel)]="cgpa" name="cgpa" placeholder="CGPA" required>
                 
               </div>
               
@@ -62,7 +62,7 @@
 
                 <div class="col-md-6">
 
-                  <input type="text"  class="form-control" id="dateofgraduation" [(ngModel)]="dateofgraduation" name="dateofgraduation" placeholder="Enter date of graduation" required>
+                  <input type="text"  class="form-control" id="dateofgraduation" [(ngModel)]="dateofgraduation" name="dateofgraduation" placeholder="Date of graduation" required>
                   
                 </div>
                 
@@ -94,7 +94,7 @@
   <div class="row">
     <div class="col-md-12">
       
-<label class="col-md-12 col-form-label" >Transaction Id</label>
+<h3 class="col-md-12 col-form-label" >Degree ID</h3>
 <div #dataContainer></div>
 
     </div>
