--- a/Angular4_CLI_Full_Project/src/app/views/components/transaction.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/transaction.component.html
@@ -11,7 +11,7 @@
             <div class="form-group row">
               
               <div class="col-md-9">
-                <input type="text" class="form-control" id="transactionid" [(ngModel)]="transactionid" name="transactionid" placeholder="Enter  transactionid" required>
+                <input type="text" class="form-control" id="transactionid" [(ngModel)]="transactionid" name="transactionid" placeholder="Search by DegreeID" required>
                
               </div>
             </div>
@@ -38,7 +38,7 @@
     <div class="col-md-12">
       
 
-<strong>Endorsement Organization Name</strong><div #dataContainer3></div>
+<strong>Endorsed By</strong><div #dataContainer3></div>
 
     </div>
 
