Some changes in frontend

--- a/Angular4_CLI_Full_Project/src/app/views/components/enrollment.component.html
+++ b/Angular4_CLI_Full_Project/src/app/views/components/enrollment.component.html
@@ -37,19 +37,122 @@
 
 
 
-
+<div style="border-style: dashed; padding: 20px;">
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-3">
       
-<h3 class="col-md-3 col-form-label" >Degree Status</h3>
-<div #dataContainer></div>
+
+<strong>Name</strong>
 
     </div>
-
-
+    <div class="col-md-9">
+<div #dataContainer></div>
+</div>
   </div>
 
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>Father Name</strong>
+
+    </div>
+    <div class="col-md-9">
+<div #dataContainer2></div>
+</div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>Roll Number</strong>
+
+    </div>
+<div class="col-md-9">
+<div #dataContainer3></div>
+</div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>Enrollment Number</strong>
+
+    </div>
+  
+
+
+  
+<div class="col-md-9">
+<div #dataContainer4></div>
+</div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>CGPA</strong>
+
+    </div>
+  
+
+  
+  
+<div class="col-md-9">
+<div #dataContainer5></div>
+</div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>Batch </strong>
+
+    </div>
+  
+
+  
+  
+<div class="col-md-9">
+<div #dataContainer6></div>
+</div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-3">
+      
+
+<strong>Date of Graduation</strong>
+
+    </div>
+  
+
+  
+  
+<div class="col-md-9">
+<div #dataContainer7></div>
+</div>
+  </div>
+
+</div>
+
+
+
+  <div class="row">
+
+<h1 #dataContainer8 style="margin: 84px;color: green;"></h1>
+
+  </div>
 
 
 
